unexpected horizontal scroll fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,12 @@
     font-family: fontregular;
     src: url("../fonts/Product Sans Regular.ttf") format('truetype');
 }
+html{
+    overflow-x: hidden !important;
+}
 body{
     font-family: fontregularb;
     letter-spacing: 2px;
-    overflow-x: hidden !important;
 }
 .container{
     /*padding: 10px !important;*/
